# mermaid-ascii

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.wasm  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: playground.yml  release.yml  test.yml
.hooks/: pre-commit
.tmp/: llm.plan.status
_site/: index.html  mermaid_ascii.d.ts
_site/examples/: architecture.expect.txt  architecture.mm.md  bt_simple.mm.md  bt_simple.out.txt  diamond.expect.txt  edges.mm.md  edges.out.txt  flowchart.expect.txt  flowchart.mm.md  gen.sh  lr_fanout.expect.txt  lr_fanout.mm.md  lr_simple.expect.txt  lr_simple.mm.md  multiline.mm.md  multiline.out.txt  pipeline.expect.txt  pipeline.mm.md  pipeline.out.txt  shapes.mm.md  shapes.out.txt  simple.expect.txt  simple.mm.md  subgraph.expect.txt  (+2 more)
examples/: architecture.mm.md  architecture.out.txt  bt_simple.mm.md  diamond.mm.md  diamond.out.txt  edges.mm.md  edges.out.txt  flowchart.out.txt  flowchart.txt  gen.sh  lr_fanout.mm.md  lr_simple.mm.md  multiline.mm.md  multiline.out.txt  pipeline.mm.md  pipeline.out.txt  shapes.out.txt  shapes.txt  simple.mm.md  simple.out.txt  sysarch.mm.md  sysarch.out.txt
scripts/: gen_examples.sh  orchestrator.sh  start.sh  stop.sh  worker.sh
src/: canvas.hom  charset.hom  grammar.pest  graph.rs  grid_data.hom  layout.hom  layout.rs  lexer.hom  lib.rs  main.rs  parser.hom  parser.rs  pathfinder.hom  render.rs  render_ascii.hom  render_svg.hom  subgraph.hom  svg_renderer.rs  tests.rs  types.hom
tests/: parser_check.rs  snapshot_tests.rs
(+18 files in other folders)
